automation/logs/master-controller.log
/Users/miami2/Documents/GitHub/bolt.new.zion.app/automation/continuous-learning-system.js:87
            improvement: improvement,
                       ^

SyntaxError: Unexpected token ':'
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at Module._compile (node:internal/modules/cjs/loader:1704:20)
    at Object..js (node:internal/modules/cjs/loader:1895:10)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1487:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (/Users/miami2/Documents/GitHub/bolt.new.zion.app/automation/master-automation-controller.js:16:34)

Node.js v22.16.0
